# P3_OCR

./: Notebook_1_nettoyage.ipynb  Notebook_2_exploration.ipynb  README.md  fct_projet_3.py  pyproject.toml
